..F....... [ZBX-16874] fixed map-type widget clipping in Internet Explorer (averza)
* commit '700af18bd140f88da5bca29a538ad016a634e2b3':
  ..F....... [ZBX-16874] fixed coding style
  ..F....... [ZBX-16874] fixed label disappearing in Internet Explorer 11 #2
  ..F....... [ZBX-16874] fixed label disappearing in Internet Explorer 11
  ..F....... [ZBX-16874] fixed invisible map-type widgets in Chrome
  ..F....... [ZBX-16874] fixed map-type widget clipping in Internet Explorer

(cherry picked from commit b23f4888611ef41391bf901a2a51299380def640)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -6532,10 +6532,11 @@ svg {
 .sysmap-widget-container {
 	overflow: hidden;
 	height: 100%;
-	width: 100%;
-	max-height: 100%;
-	max-width: 100%;
 	display: flex;
+
+	svg {
+		flex-grow: 1;
+	}
 }
 
 @supports (-ms-ime-align:auto) {
